tests/toylang/neg/001279_mutation.toylang
program a = { then a = a; } .
